--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
 python:
   - "2.7"
+before_install:
+  - sudo add-apt-repository ppa:jcfp -y
+  - sudo apt-get update -q
+  - sudo apt-get install sabnzbdplus -y
 install:
   - pip install --upgrade -r tests/requirements.txt
 script:
