Use special patched version of subprocess for Unicode POpen on Windows

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 install:
   - pip install --upgrade -r tests/requirements.txt
-  - pip install pypiwin32
+  - pip install pypiwin32 subprocessww
 
 build_script:
   - pytest
