--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,9 @@ SABnzbd*.exe
 SABnzbd*.gz
 SABnzbd*.dmg
 
-# WingIDE project files
+# WingIDE/PyCharm project files
 *.wp[ru]
+.idea
 
 # Testing folders
 .cache
