--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: python
+
 python:
   - "2.7"
-before_install:
+
+before_script:
   - sudo add-apt-repository ppa:jcfp -y
   - sudo apt-get update -q
-  - sudo apt-get install sabnzbdplus -y
+  - sudo apt-get install sabnzbdplus chromium-chromedriver -y
+  - ln -s /usr/lib/chromium-browser/chromedriver ~/bin/chromedriver
+
 install:
   - pip install --upgrade -r tests/requirements.txt
+
 script:
-  - pytest
+  - python ./tests/test_functional.py
+
 notifications:
   email:
     on_success: never
