--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -27,7 +27,7 @@ parts:
     stage-packages:
       - to armhf: ["unrar:armhf", "p7zip-full:armhf", "openssl:armhf", "par2:armhf"]
       - to arm64: ["unrar:arm64", "p7zip-full:arm64", "openssl:arm64", "par2:arm64"]
-      - else: ["unrar", "p7zip-full", "par2-tbb"]
+      - else: ["unrar", "p7zip-full", "openssl", "par2-tbb"]
     build-packages:
       - to armhf: ["libffi-dev:armhf", "python-dev:armhf", "libssl-dev:armhf"]
       - to arm64: ["libffi-dev:arm64", "python-dev:arm64", "libssl-dev:arm64"]
