--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -28,7 +28,8 @@ parts:
     stage-packages:
       - to armhf: ["unrar:armhf", "p7zip-full:armhf", "par2:armhf"]
       - to arm64: ["unrar:arm64", "p7zip-full:arm64", "par2:arm64"]
-      - else: ["unrar", "p7zip-full", "par2-tbb"]
+      - to amd64: ["unrar:amd64", "p7zip-full:amd64", "par2-tbb:amd64"]
+      - to i386: ["unrar:i386", "p7zip-full:i386", "par2-tbb:i386"]
     override-build: |
       snapcraftctl build
       python tools/make_mo.py
