Add back dev packages for building extensions

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -30,6 +30,11 @@ parts:
       - to arm64: ["unrar:arm64", "p7zip-full:arm64", "par2:arm64"]
       - to amd64: ["unrar:amd64", "p7zip-full:amd64", "par2-tbb:amd64"]
       - to i386: ["unrar:i386", "p7zip-full:i386", "par2-tbb:i386"]
+    build-packages:
+      - to armhf: ["libffi-dev:armhf", "python-dev:armhf"]
+      - to arm64: ["libffi-dev:arm64", "python-dev:arm64"]
+      - to amd64: ["libffi-dev:amd64", "python-dev:amd64"]
+      - to i386: ["libffi-dev:i386", "python-dev:i386"]
     override-build: |
       snapcraftctl build
       python tools/make_mo.py
