--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -3,6 +3,7 @@ version: git
 summary: SABnzbd
 description: The automated Usenet download tool
 confinement: strict
+grade: edge
 icon: interfaces/Config/templates/staticcfg/images/logo-small.svg
 adopt-info: sabnzbd
 version-script: |
@@ -23,20 +24,8 @@ parts:
     python-version: python2
     python-packages: [cheetah3, cryptography, sabyenc]
     build-attributes: [no-system-libraries]
-    stage-packages:
-      - to armhf: ["unrar:armhf", "p7zip-full:armhf", "par2:armhf"]
-      - to arm64: ["unrar:arm64", "p7zip-full:arm64", "par2:arm64"]
-      - to amd64: ["unrar:amd64", "p7zip-full:amd64", "par2:amd64"]
-      - to i386: ["unrar:i386", "p7zip-full:i386", "par2:i386"]
-    build-packages:
-      - to armhf: ["libffi-dev:armhf", "python-dev:armhf", "libssl-dev:armhf"]
-      - to arm64: ["libffi-dev:arm64", "python-dev:arm64", "libssl-dev:arm64"]
-      - to amd64: ["libffi-dev:amd64", "python-dev:amd64", "libssl-dev:amd64"]
-      - to i386: ["libffi-dev:i386", "python-dev:i386", "libssl-dev:i386"]
-    override-pull: |
-      snapcraftctl pull
-      [ $(git rev-parse --abbrev-ref HEAD) = "master" ] && GRADE=stable || GRADE=devel
-      snapcraftctl set-grade "$GRADE"
+    stage-packages: [unrar, p7zip-full, par2]
+    build-packages: [libffi-dev, python-dev, ibssl-dev]
     override-build: |
       snapcraftctl build
       python tools/make_mo.py
