Set snapcraft grade to stable so it can be published
This snapcraft stuff is just a developer's nightmare. They pretend it is easy, but for developers that introduced way to much customization and weird features..

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -3,7 +3,7 @@ version: git
 summary: SABnzbd
 description: The automated Usenet download tool
 confinement: strict
-grade: devel
+grade: stable
 icon: interfaces/Config/templates/staticcfg/images/logo-small.svg
 version-script: |
   grep -oP '(?<=^Version: ).*' PKG-INFO
