--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,13 +1,5 @@
-# Exclude SMPL/Plush since these are not used anymore
-# Exclude included libraries
-extraction:
-    javascript:
-        index:
-            - exclude: "interfaces/smpl"
-            - exclude: "interfaces/Plush"
-            - exclude: "**/*jquery*"
-            - exclude: "**/*min*"
-    python:
-        index:
-            - exclude: "cherrypy"
-            - exclude: "gntp"
+# Dont include included libraries
+path_classifiers:
+    library:
+        - cherrypy
+        - gntp
