--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,10 +1,9 @@
-# Dont include included libraries
-path_classifiers:
-    library:
-        - cherrypy
-        - gntp
-
 extraction:
   javascript:
     index:
       exclude: interfaces/smpl
+      exclude: interfaces/Plush
+  python:
+    index:
+      exclude: cherrypy
+      exclude: gntp
