--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,10 +1,10 @@
 extraction:
   javascript:
     index:
-      exclude: interfaces/smpl
-      exclude: interfaces/Plush
+      exclude: "interfaces/smpl/**"
+      exclude: "interfaces/Plush/**"
       exclude: "**/*min*"
   python:
     index:
-      exclude: cherrypy
-      exclude: gntp
+      exclude: "cherrypy/**"
+      exclude: "gntp/**"
