Update LGTM based on feedback
See #1221

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -1,10 +1,7 @@
-extraction:
-  javascript:
-    index:
-      exclude: interfaces/smpl
-      exclude: interfaces/Plush
-      exclude: "**/*min*"
-  python:
-    index:
-      exclude: cherrypy
-      exclude: gntp
+path_classifiers:
+  library:
+    - interfaces/smpl
+    - interfaces/Plush
+    - cherrypy
+    - gntp
+    - "**/*min*"
