--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,13 +6,11 @@ environment:
   SAB_NEWSSERVER_PASSWORD:
     secure: bO3XHtWTleVF9AqRV/V/nA==
 
+  # We only use 64bit to test anyway
   matrix:
+    - PYTHON: "C:\\Python35-x64"
     - PYTHON: "C:\\Python36-x64"
-      PYTHON_VERSION: "3.6.x"
-      PYTHON_ARCH: "64"
     - PYTHON: "C:\\Python37-x64"
-      PYTHON_VERSION: "3.7.x"
-      PYTHON_ARCH: "64"
 
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
