Py3: Switch to using sabyenc3

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 six
+sabyenc3
 cheetah3
 cryptography
 feedparser
@@ -6,4 +7,3 @@ configobj
 cherrypy
 chardet
 gntp
-git+git://github.com/sabnzbd/sabyenc@sabyenc3#egg=sabyenc
