--- a/.travis.yml
+++ b/.travis.yml
@@ -37,11 +37,17 @@ install:
       ln -s /usr/lib/chromium-browser/chromedriver ~/bin/chromedriver;
     fi;
   - python3 --version
+  - python3 -m pip install --upgrade pip
   - python3 -m pip install --upgrade -r requirements.txt
   - python3 -m pip install --upgrade -r tests/requirements.txt
 
 script:
   - python3 -m pytest
+
+  # Force code-style for folders that we already did, only on 1 job
+  - if [[ $TRAVIS_PYTHON_VERSION == "3.7" ]]; then python3 -m black tests -l120 --py36 -N --check; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == "3.7" ]]; then python3 -m black tools -l120 --py36 -N --check; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == "3.7" ]]; then python3 -m black sabnzbd/utils -l120 --py36 -N --check; fi
 
 notifications:
   email:
