--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,8 +15,9 @@ environment:
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
-  - pip install --upgrade -r requirements.txt
-  - pip install --upgrade -r tests/requirements.txt
+  - python -m pip install --upgrade pip
+  - python -m pip install --upgrade -r requirements.txt
+  - python -m pip install --upgrade -r tests/requirements.txt
 
 build_script:
   - python -m pytest
