Py3: Code-format rss.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ script:
 
   # Force code-style for folders that we already did, only on 1 job
   - if [[ $TRAVIS_PYTHON_VERSION == "3.7" ]]; then
-      python3 -m black scripts tools tests util sabnzbd/utils -l120 --py36 -N --check;
+      python3 -m black scripts tools tests util sabnzbd/utils sabnzbd/rss.py -l120 --py36 -N --check;
     fi
 
 notifications:
