Py3: Small fixes and style changes to database.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ script:
         sabnzbd/emailer.py
         sabnzbd/constants.py
         sabnzbd/decorators.py
+        sabnzbd/database.py
         sabnzbd/getipaddress.py
         sabnzbd/filesystem.py
         sabnzbd/dirscanner.py
