--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,11 @@ notify2
 # Optional support for *nix tray icon.
 # Note that pygobject depends on pycairo, which requires pkg-config and cairo headers.
 # See https://pycairo.readthedocs.io/en/latest/getting_started.html
-#pygobject>=3.10.2; sys_platform != 'win32'
+# Uncomment line below or manually install after installing requirements.
+# pygobject>=3.10.2; sys_platform != 'win32' and sys_platform != 'darwin'
+
+# Optional support for system power management on *nix
+dbus-python; sys_platform != 'win32' and sys_platform != 'darwin'
 
 # Only on Windows
 pywin32>=227; sys_platform == 'win32'
