--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,7 @@ install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
   - python -m pip install --upgrade pip
+  - python -m pip install --upgrade wheel
   - python -m pip install --upgrade -r requirements.txt
   - python -m pip install --upgrade -r tests/requirements.txt
 
