Re-work handling of non-decodable articles
These used to be send to the Decoder, now handled directly

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ script:
         sabnzbd/emailer.py
         sabnzbd/constants.py
         sabnzbd/decorators.py
+        sabnzbd/decoder.py
         sabnzbd/database.py
         sabnzbd/getipaddress.py
         sabnzbd/filesystem.py
