--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
-
 matrix:
   include:
+  # On Linux we test all supported Python versions
+  # On macOS we only test the semi-recent version that is included
   - os: linux
     language: python
     python: "3.5"
