Show all output so maybe at some point we can fix tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
   - python3 -m pip install --upgrade -r tests/requirements.txt
 
 script:
-  - python3 -m pytest
+  - python3 -m pytest -s
 
 notifications:
   email:
