--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,4 +12,4 @@ install:
   - python -m pip install --upgrade -r tests/requirements.txt
 
 build_script:
-  - python -m pytest
+  - python -m pytest -s
