--- a/linux/sabnzbd@.service
+++ b/linux/sabnzbd@.service
@@ -17,6 +17,7 @@ Wants=network-online.target
 After=network-online.target
 
 [Service]
+Environment="PYTHONIOENCODING=utf-8"
 ExecStart=/opt/sabnzbd/SABnzbd.py --logging 1 --browser 0
 User=%I
 Type=simple
