--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -13,7 +13,18 @@ jobs:
       - name: Generate translatable texts
         run: |
           python3 tools/extract_pot.py
-      - name: Push translatable texts back to repo
+      - name: Install Transifex client
+        # Sudo is needed to link the "tx"-command
+        run: |
+          sudo -H python3 -m pip install setuptools wheel
+          sudo -H python3 -m pip install transifex-client
+      - name: Push/pull Transifex translations
+        run: |
+          tx push --source --parallel
+          tx pull --all --force --parallel
+        env:
+          TX_TOKEN: ${{ secrets.TX_TOKEN }}
+      - name: Push translatable and translated texts back to repo
         uses: stefanzweifel/git-auto-commit-action@master
         with:
           commit_message: Update translatable texts
