--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,7 @@ install:
       ln -s /usr/lib/chromium-browser/chromedriver ~/bin/chromedriver;
     fi;
   - python3 --version
-  - python3 -m pip install --upgrade pip
-  - python3 -m pip install --upgrade wheel
+  - python3 -m pip install --upgrade pip wheel
   - python3 -m pip install --upgrade -r requirements.txt
   - python3 -m pip install --upgrade -r tests/requirements.txt
 
