--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,8 +6,7 @@ environment:
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
-  - python -m pip install --upgrade pip
-  - python -m pip install --upgrade wheel
+  - python -m pip install --upgrade pip wheel
   - python -m pip install --upgrade -r requirements.txt
   - python -m pip install --upgrade -r tests/requirements.txt
 
