More text-file updates for 3.2.0-develop

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 sabyenc3>=4.0.0
 cheetah3>=3.0.0
 cryptography
-feedparser<6.0.0; python_version == '3.5'
-feedparser>=6.0.0; python_version > '3.5'
+feedparser>=6.0.0
 configobj
 cheroot<8.4.3
 cherrypy
